Bug 474504 - After opening a KCM that requires authentication to apply changes, "Apply" button of all KCMs has a lock icon
Summary: After opening a KCM that requires authentication to apply changes, "Apply" bu...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-09-13 20:18 UTC by Patrick Silva
Modified: 2023-09-18 11:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (975.72 KB, video/webm)
2023-09-13 20:18 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-09-13 20:18:24 UTC
Created attachment 161610 [details]
screen recording

STEPS TO REPRODUCE
1. open SDDM KCM - the "Apply" button has a lock icon
2. go to any KCM that does not require authentication to apply changes
3. 

OBSERVED RESULT
the "Apply" button of the KCM used in the step 2 unexpectedly has a lock icon too. Please watch the attached screen recording.

EXPECTED RESULT
the "Apply" button of KCMs that do not require authentication to apply changes should not have a lock icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-09-15 17:41:37 UTC
Can confirm. Possible regression from 15bda47019c197af5e20f6b4d6f1f7f174755636, but I can't revert it or bisect to confirm since the world around has changed too much. Can you investigate, Nicolas?
Comment 2 Bug Janitor Service 2023-09-16 19:33:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/254
Comment 3 Nicolas Fella 2023-09-18 11:05:37 UTC
Git commit 2ad6b7c395cbc94b034e01c383acaae5bd0181e4 by Nicolas Fella.
Committed on 18/09/2023 at 13:04.
Pushed by nicolasfella into branch 'master'.

Apply auth status also for invalid actions

When the KCM has no auth action the action object is invalid

Also call authStatusChanged then so that it resets the icon

M  +1    -4    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/2ad6b7c395cbc94b034e01c383acaae5bd0181e4