Apply auth status also for invalid actions

When the KCM has no auth action the action object is invalid

Also call authStatusChanged then so that it resets the icon

BUG: 474504